src/objects/sharem__SmDocument__c.object
<CustomObject>
    <description>Sharemethods Document Entity</description>
    <fields>
        <fullName>sharem__ContentDocumentId__c</fullName>
        <description>ContentDocumentId</description>
        <externalId>true</externalId>
        <inlineHelpText>ContentDocumentId</inlineHelpText>
        <label>ContentDocumentId</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sharem__ContentSize__c</fullName>
        <description>ContentSize</description>
        <inlineHelpText>ContentSize</inlineHelpText>
        <label>ContentSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sharem__ContentUrl__c</fullName>
        <description>ContentUrl</description>
        <inlineHelpText>ContentUrl</inlineHelpText>
        <label>ContentUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sharem__ContentVersionId__c</fullName>
        <description>ContentVersionId</description>
        <inlineHelpText>ContentVersionId</inlineHelpText>
        <label>ContentVersionId</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharem__Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sharem__FileType__c</fullName>
        <description>FileType</description>
        <inlineHelpText>FileType</inlineHelpText>
        <label>FileType</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharem__LastModifiedDate__c</fullName>
        <description>LastModifiedDate</description>
        <inlineHelpText>LastModifiedDate</inlineHelpText>
        <label>LastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sharem__LibraryName__c</fullName>
        <description>LibraryName</description>
        <inlineHelpText>LibraryName</inlineHelpText>
        <label>LibraryName</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharem__Origin__c</fullName>
        <description>Origin</description>
        <inlineHelpText>Origin</inlineHelpText>
        <label>Origin</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sharem__OwnerName__c</fullName>
        <description>OwnerName</description>
        <inlineHelpText>OwnerName</inlineHelpText>
        <label>OwnerName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SmDocument</label>
    <listViews>
        <fullName>sharem__All</fullName>
        <columns>NAME</columns>
        <columns>sharem__ContentVersionId__c</columns>
        <columns>sharem__ContentDocumentId__c</columns>
        <columns>sharem__Origin__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SmDocument Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SmDocuments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>